Fix: Favicon Set on Light/Dark Mode

--- a/Styles/index.css
+++ b/Styles/index.css
@@ -45,6 +45,7 @@ body {
   --toolbar-bg: #F0F0F0;
   --button-bg: #D4AF37;
   --button-hover: #B7950B;
+  /* --logo-url: url('../src/Images/logo_light.png'); */
 }
 
 [data-theme="dark"] {
@@ -66,9 +67,5 @@ body {
   --toolbar-bg: #555454;
   --button-bg: #D4AF37;
   --button-hover: #FFD700;
+  /* --logo-url: url('../src/Images/logo_dark.png'); */
 }
-
-/* *::selection {
-  color: white;
-  background-color: var(--color-primary);
-} */
